--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "js-sha256": "^0.9.0",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "*"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
