--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 // 环境变量必须以"VUE_APP_"开头
-VUE_APP_AXIOS_BASE_URL = http://192.168.18.141:3000/mock/11/apti/api
+VUE_APP_AXIOS_BASE_URL = http://api.ifbe.cn/mock/20
