--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 // 环境变量必须以"VUE_APP_"开头
 // VUE_APP_AXIOS_BASE_URL = http://192.168.18.141:3000/mock/11
+VUE_APP_TIMEOUT_INTERVAL = 10
+VUE_APP_REFRESH_TOKEN_INTERVAL = 25
 VUE_APP_AXIOS_BASE_URL = /api
 VUE_APP_SYSTEM_NAME = xxxx分析系统
 VUE_APP_SYSTEM_VERSION = V1.0.0
