--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
+    "echarts": "^5.1.2",
     "element-ui": "^2.13.1",
     "js-sha256": "^0.9.0",
     "vue": "^2.6.11",
